<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MainStrings -->
    <string name="app_name">Sami</string>
    <string name="title_home">Hem</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Aviseringar</string>
    <string name="msg_subscribed">Subscribed to message</string>
    <string name="msg_unsubscribed">Unsubscribed from message</string>
    <string name="msg_subscribe_failed">Failed subscribing to message</string>
    <string name="msg_unsubscribe_failed">Failed unsubscribing from message</string>

    <!-- Notification -->
    <string name="notification_channel_active_trip_name">Aktiv resa</string>
    <string name="notification_channel_active_trip_description">Visar pågående resa</string>
    <string name="notification_channel_normal_name">Normal</string>
    <string name="notification_channel_normal_description">Normala notifikationsmeddelanden</string>

    <!-- SearchTrip -->
    <string name="navigation_trip_search">Sök resa</string>
    <string name="navigation_trip_detailview">Bokningsinformation</string>
    <string name="add_new_trip">Lägg till ny resa</string>
    <string name="from">Från</string>
    <string name="to">Till</string>
    <string name="date">Datum</string>
    <string name="time">Tid</string>
    <string name="driver">Förare</string>
    <string name="passengers">Passagerare</string>
    <string name="book_trip">Boka resa</string>
    <string name="cancel_trip">Avboka Resa</string>
    <string name="start_trip">Starta Resa</string>
    <string name="finish_trip">Avsluta Resa</string>
    <string name="trip_full_message">Resan är fullbokad</string>
    <string name="user_added_to_trip">Booked a seat</string>
    <string name="user_removed_from_trip">Du har nu avbokat din plats på resan</string>
    <string name="show_ticket">Visa biljett</string>

    <!-- FileteredTrips -->
    <string name="navigation_filtered_trips">Resultat</string>
    <string name="ok_button">Okej</string>
    <string name="cancel_button">Avbryt</string>
    <string name="departure_time">Avgångstid: </string>
    <string name="choose_eariliest_departure_time">Välj tidigast avgångstid: </string>
    <string name="stay_home">Du får stanna hemma: </string>

    <!-- TripDetailView -->
    <string name="action_remove">Ta bort</string>
    <string name="trip_removed">Resan har tagits bort</string>

    <!-- CreateTrip -->
    <string name="navigation_create_trip">Skapa resa</string>
    <string name="amount_of_passengers">Antal passagerare</string>

    <!-- My Page -->
    <string name="navigation_my_page">Min sida</string>
    <string name="edit_profile">Ändra profil</string>
    <string name="sign_out">Logga ut</string>
    <string name="sign_in">Logga in</string>
    <string name="delete_account">Radera konto</string>
    <string name="deletion_failed_message">Radering misslyckades. Återautentisering nödvändig för att radera konto.</string>

    <!-- Edit Profile -->
    <string name="navigation_edit_profile">Ändra profil</string>
    <string name="manage_bank_card_button">Hantera bankkort</string>
    <string name="card_number">Kortnummer</string>

    <!-- MyTrips -->
    <string name="navigation_my_trips">Mina Resor</string>

    <!-- ActiveTrip -->
    <string name="navigation_active_trip">Aktiv resa</string>

    <!-- LeaderBoard -->
    <string name="navigation_leaderboard">Topplista</string>
    <string name="show_info_active_trip_string">Visa koden nedanför för din förare när resan är färdig</string>
    <string name="search_trip_button">Sök Resa</string>

    <!-- SignInPrompt -->
    <string name="click_to_sign_in">Klicka för att logga in/registrera</string>
    <string name="search_trip_hint_textview">Välj startplats och destination och klicka på \"Sök Resa\"</string>

</resources>
