<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.muk.sami.SearchTripFragment">


    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/navigation_trip_detailview"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/from_text_view"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text_view"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="190dp"
        android:layout_toEndOf="@+id/from"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Gothenburg" />

    <TextView
        android:id="@+id/to_text_view"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from_text_view"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="190dp"
        android:layout_toEndOf="@+id/to"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Stockholm" />

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_alignStart="@+id/date"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="12-05-2019" />

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_alignStart="@+id/time"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="08:48" />

    <TextView
        android:id="@+id/to"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="38dp"
        android:text="@string/to" />

    <TextView
        android:id="@+id/from"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text_view"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/from" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to_text_view"
        android:layout_alignStart="@+id/to_text_view"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/time"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to_text_view"
        android:layout_marginStart="58dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/date_text_view"
        android:text="@string/time" />

    <Button
        android:id="@+id/show_qr_code_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignBottom="@+id/to_text_view"
        android:layout_marginEnd="-92dp"
        android:layout_marginBottom="73dp"
        android:text="@string/show_qr_code_string" />

    <Button
        android:id="@+id/start_trip_button"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="122dp"
        android:background="@color/lightGreen"
        android:layout_marginBottom="25dp"
        android:text="@string/start_trip" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/time_text_view"
        app:srcCompat="@drawable/ic_access_time_black_24dp" />


</RelativeLayout>